2004-09-09  Christian Ruppert <arc@users.sf.net>
	* uwm/handlers.c(InitHandlers): uwm now stops at initialisation in
	  case no shapes extension is found.

2003-12-01  Christian Ruppert <arc@users.sf.net>
	* RELEASE: ude-0.2.9a
	* lib/Makefile.am: fixed rpm built. obsolete library headers are no
	  longer installed.

2003-11-30  Christian Ruppert <arc@users.sf.net>
	* RELEASE: ude-0.2.9
	* uwm/Makefile.am: removed tree.c and tree.h from built and
	  distribution
	* uwm/handlers.c: uwm no longer outputs usually meaningless error
	  messages when compiled without debugging
	* configure.in: changed version
	* README: updated
	* NEWS: updated

2003-11-25  Christian Ruppert <arc@users.sf.net>
	* uwm/windows.c: fixed a bug in focus management (ActivateWin now no
	  longer gives focus to root before setting focus to destination
	  window)

2003-11-11  Christian Ruppert <arc@users.sf.net>
	* uwm/windows.c: added FocusWin global.
	* uwm/widgets.h, uwm/widgets.c, uwm/windows.c, uwm/properties.c,
	  uwm/handlers.c: removed 'Active' parameter from DrawFrameBevel and
	  DrawTitle functions.
	* uwm/handlers.c: no longer reacting on KeyRelease events that are not
	  on our screen.
	* uwm/handlers.c: added handlers for FocusIn and FocusOut events.
	* uwm/uwm.h: added FocusChangeMask to FRAME_EVENTS.
	* uwm/uwm.h, uwm/windows.c: added flag ACTIVE_BORDER to ultimate
	  context which is set by DrawWinBorder.
	* uwm/windows.c (DrawWinBorder): changed criteria for border color
	  from ActiveWin to FocusWin.


2003-06-30  Christian Ruppert <arc@users.sf.net>
        * uwm/properties.c: uwm no longer updates window's borders in case
          motif hints changes when a window is mapped. fixes problems with
          mplayer fullscreen mode for example.

2003-06-05  Christian Ruppert <arc@users.sf.net>
        * autogen.sh: added cleanup code to remove modifications made by
          new gettext in case they are accidentally checked into cvs.
