@@ -296,6 +296,14 @@ int main(int argc,char **argv)
   textdomain (PACKAGE);
 #endif /* ENABLE_NLS */
 
+#ifdef DEVEL
+  TheScreen.errout=fopen("/dev/tty10","w");
+  fprintf(TheScreen.errout,"UWM: Using this display for Error output!\n");
+  fflush(TheScreen.errout);
+#else
+  TheScreen.errout=stderr;
+#endif
+
   printf("\n\n     UDE - the Unix Desktop Environment\n\n");
   printf("Version %s\n",UWMVERSION);
 
